# notion

./: .gitignore  Cargo.toml  README.md  taplo.toml
notion/: Cargo.toml
notion-cli/: Cargo.toml
notion-cli/src/: cli.rs  config.rs  main.rs  tests.rs
notion-http/: Cargo.toml
notion-http/src/: blocks.rs  client.rs  errors.rs  main.rs
notion-model/: Cargo.toml
notion-model/src/: builder.rs  constants.rs  errors.rs  ids.rs  lib.rs  paginated.rs  pagination.rs  response.rs
notion-model/src/objects/: block.rs  code_languages.rs  color.rs  comment.rs  database.rs  date.rs  file_and_emoji.rs  mod.rs  page.rs  page_properties.rs  parent.rs  rich_text.rs  user.rs
notion-model/src/objects/block/: bookmark.rs  breadcrumb.rs  bulleted_list_item.rs  callout.rs  child_database.rs  child_page.rs  code.rs  column.rs  column_list.rs  divider.rs  embed.rs  equation.rs  file.rs  heading_1.rs  heading_2.rs  heading_3.rs  image.rs  link_preview.rs  mention.rs  mod.rs  numbered_list_item.rs  paragraph.rs  pdf.rs  quote.rs  synced_block.rs  table.rs  table_of_contents.rs  table_row.rs  template.rs  to_do.rs  toggle.rs  video.rs
notion-model/src/objects/page_properties/: email.rs  formula.rs  mod.rs  number.rs  phone_number.rs  rich_text.rs  rollup.rs  select.rs  status.rs  unique_id.rs
notion-model/src/objects/properties/: checkbox.rs  created_by.rs  created_time.rs  date.rs  email.rs  files.rs  formula.rs  last_edited_by.rs  last_edited_time.rs  mod.rs  multi_select.rs  number.rs  people.rs  phone_number.rs  relation.rs  rich_text.rs  rollup.rs  select.rs  status.rs  title.rs  url.rs
notion/src/: blocks.rs  client.rs  databases.rs  errors.rs  lib.rs  main.rs  pages.rs  result_types.rs  utils.rs
test_data/: block.json
