[package]
name = "notion-cli"
version = "0.1.0"
authors = ["erics118"]
edition = "2021"
rust-version = "1.65.0"
description = "A wrapper for the Notion official API."
homepage = "https://github.com/erics118/notion"
repository = "https://github.com/erics118/notion"
license = "MIT"
keywords = ["notion", "api"]
categories = ["api-bindings"]
publish = false

[dependencies]
notion = { path = "../notion" }

anyhow = {version="1.0.71", features=["backtrace"]}
serde = "1.0.164"
serde_json = "1.0.97"
thiserror = "1.0.40"
tokio = { version = "1.28.2", features = ["full"] }
clap = {version="4.3.4", features=["cargo", "derive", "env"]}
config = { version = "0.13.3", features = ["toml"] }
dirs = "5.0.1"
serde_test = "1.0.164"
url = "2.4.0"
