[package]
name = "notion-cli"
version = "0.1.0"
authors = ["erics118"]
edition = "2021"
rust-version = "1.65.0"
description = "A wrapper for the Notion official API."
homepage = "https://github.com/erics118/notion"
repository = "https://github.com/erics118/notion"
license = "MIT"
keywords = ["notion", "api"]
categories = ["api-bindings"]
publish = false

[dependencies]
notion = { path = "../notion" }

anyhow = { version = "1.0.75", features = ["backtrace"] }
clap = { version = "4.3.24", features = ["cargo", "derive", "env"] }
config = { version = "0.13.3", features = ["toml"] }
dirs = "5.0.1"
serde = "1.0.189"
thiserror = "1.0.49"
tokio = { version = "1.33.0", features = ["full"] }
serde_json = "1.0.107"
