[package]
name = "notion-model"
version = "0.1.0"
authors = ["erics118"]
edition = "2021"
rust-version = "1.65.0"
description = "Notion API endpoint response objects and builders."
homepage = "https://github.com/erics118/notion"
repository = "https://github.com/erics118/notion"
license = "MIT"
keywords = ["notion", "api"]
categories = ["api-bindings"]
publish = false

[dependencies]
chrono = { version = "0.4.26", features = ["serde"] }
chrono-tz = { version = "0.8.2", features = ["serde", "case-insensitive"] }
serde = { version = "1.0.164", features = ["derive"] }
uuid = { version = "1.3.4", features = ["v4", "serde"] }

[dev-dependencies]
serde_test = { version = "1.0.164" }