[package]
name = "notion-model"
version = "0.1.0"
authors = ["erics118"]
edition = "2021"
rust-version = "1.65.0"
description = "Notion API endpoint response objects and builders."
homepage = "https://github.com/erics118/notion"
repository = "https://github.com/erics118/notion"
license = "MIT"
keywords = ["notion", "api"]
categories = ["api-bindings"]
publish = false

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = { version = "0.9", features = ["serde", "case-insensitive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.10", features = ["v4", "serde"] }

[dev-dependencies]
serde_test = { version = "1.0" }
