[package]
name = "notion"
version = "0.1.0"
authors = ["erics118"]
edition = "2021"
rust-version = "1.65.0"
description = "A wrapper for the Notion official API."
homepage = "https://github.com/erics118/notion"
repository = "https://github.com/erics118/notion"
license = "MIT"
keywords = ["notion", "api"]
categories = ["api-bindings"]
publish = false

[dependencies]
notion-model = { path = "../notion-model" }

anyhow = { version = "1.0.75", features = ["backtrace"] }
paste = "1.0.14"
reqwest = { version = "0.11.22", features = ["json"] }
serde = "1.0.189"
serde_json = "1.0.107"
thiserror = "1.0.49"
